--- a/.github/workflows/lambda-deploy.yml
+++ b/.github/workflows/lambda-deploy.yml
@@ -5,7 +5,7 @@ on:
 
 env:
   AWS_REGION: "us-east-1"
-  LAMBDA_FUNCTION_NAME: "rxve-api-function"  # Ensure this matches your Lambda function name
+  LAMBDA_FUNCTION_NAME: "arxv-tool-api-function"  # Ensure this matches your Lambda function name
 
 jobs:
   deploy:
