--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -33,6 +33,10 @@ jobs:
         run: terraform init
         working-directory: terraform
 
+      - name: Terraform Plan
+        run: terraform plan
+        working-directory: terraform
+
       - name: Terraform Destroy
         run: terraform destroy -auto-approve
         working-directory: terraform
