--- a/.github/workflows/lambda-deploy.yml
+++ b/.github/workflows/lambda-deploy.yml
@@ -5,12 +5,11 @@ on:
 
 env:
   AWS_REGION: "us-east-1"
-  LAMBDA_FUNCTION_NAME: "arxv-tool-api-function"  # Ensure this matches your Lambda function name
+  LAMBDA_FUNCTION_NAME: "arxv-tool-api-function"
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -26,7 +25,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install --target . -r requirements.txt
         shell: bash
-      
+
       - name: Log Installed Packages
         working-directory: ./src/lambda
         run: |
@@ -49,3 +48,4 @@ jobs:
       - name: Deploy Lambda Function
         run: |
           aws lambda update-function-code --function-name ${{ env.LAMBDA_FUNCTION_NAME }} --zip-file fileb://terraform/index.zip
+          aws lambda update-function-configuration --function-name ${{ env.LAMBDA_FUNCTION_NAME }} --environment "Variables={OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}}"
